@startuml
title Improved Database Schema Explanation for Meeting Organizer App

' Define the sessions table with key information
entity "sessions" as sessions {
    * id : SERIAL
    * session_code : VARCHAR(8) UNIQUE
    --
    created_at : TIMESTAMP (default CURRENT_TIMESTAMP)
    expires_at : TIMESTAMP (default CURRENT_TIMESTAMP + INTERVAL '24 hours')
}

' Define the users table with a foreign key reference
entity "users" as users {
    * id : SERIAL
    * session_id : INTEGER    "Foreign Key -> sessions.id"
    * name : VARCHAR(100)
    * is_ready : BOOLEAN (default FALSE)
    --
    created_at : TIMESTAMP (default CURRENT_TIMESTAMP)
}

' Define the schedules table with a foreign key reference
entity "schedules" as schedules {
    * id : SERIAL
    * user_id : INTEGER      "Foreign Key -> users.id"
    * day_of_week : INTEGER  "0 (Sunday) - 6 (Saturday)"
    * start_time : TIME
    * end_time : TIME        "Must be > start_time"
    --
    created_at : TIMESTAMP (default CURRENT_TIMESTAMP)
}

' Improved relationships with explicit FK labels and cardinality
sessions ||--o{ users : "session_id (FK)"
users ||--o{ schedules : "user_id (FK)"

@enduml
